--- a/NodeServiceRendering/NodeServiceRendering.csproj
+++ b/NodeServiceRendering/NodeServiceRendering.csproj
@@ -3,7 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <UserSecretsId>c5f79d95-8f45-47d1-9f2e-e98785f39039</UserSecretsId>
   </PropertyGroup>
+  
+  <Target Name="PrepublishScript" BeforeTargets="PrepareForPublish">
+    <Exec Command="npm install" />
+  </Target>
 
 
   <ItemGroup>
